feat: add skip npm flag to create releases without publishing (#7)
* feat: add skip npm flag to create releases without publishing

* fix: global regex

* fix: github tag regex and push tags order

--- a/action.yml
+++ b/action.yml
@@ -36,6 +36,10 @@ inputs:
     description: "In case createGithubReleases: aggregate is set, you can customize the GitHub tag name. Default to `release-<timestamp>`"
     required: false
     default: ""
+  skipNpm:
+    description: "Skip publishing to npm"
+    required: false
+    default: "false"
 outputs:
   published:
     description: A boolean value to indicate whether a publishing is happened or not
